# NewProjectTemplate

./: CMakeLists.txt  README.md
lib/gtest-1.6.0/: CMakeLists.txt
src/cudaProj1/: CMakeLists.txt  cudaProj1.cu
src/cudaProj1/include/: cudaProj1.h
src/glGraphics/: CMakeLists.txt  glGraphics.cpp
src/glGraphics/include/: glGraphics.h
src/project1/: CMakeLists.txt
test/: test_cudaProj1.cu  test_project1.cpp
